{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "ManualShipThrusterControl",
            "id": "f062a2a2-29b1-4c39-8eb1-0bf2d5aa483e",
            "actions": [
                {
                    "name": "PitchAndRoll",
                    "type": "Value",
                    "id": "23c66b26-1ab0-4e79-a297-c63d9491aae9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "Value",
                    "id": "722b9e98-5193-46c8-8b27-00d72a104568",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Throttle",
                    "type": "Value",
                    "id": "3025a863-1e49-448a-8d35-1d8d2a66169c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "3ce49c64-9185-497f-b42e-e4b241b9db18",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "pitchAndRollJoystick",
                    "type": "Value",
                    "id": "1fd4c333-4485-4bf8-9310-18703e978554",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "StickRz",
                    "type": "Value",
                    "id": "206fcbf0-3861-4512-addf-b69f476da629",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6249b220-218c-466e-bac4-44e02fd92c39",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "PitchAndRoll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keybord",
                    "id": "17b60ad3-63b7-4254-a5a8-47f1df549f18",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c00c6e05-b586-4174-95b9-4cede61971ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "78ab18db-ba0c-4ab6-8479-4673ac1b5331",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "d610b082-76f6-453c-850c-77dba71404e2",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "07bee238-ac15-410a-803f-fb69143213f5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stick",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1e72c36b-d280-4b06-b6d0-cc7884f8c50c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stick",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keybord",
                    "id": "e8f4d892-a45b-4775-8b3e-e5d9923c60bb",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5c0d36da-080f-44de-8ec3-45272337c63c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bdbb3c34-96f8-476e-b8fa-047e776cc8b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "77b41022-7814-44b6-9de2-00ab8d91cf69",
                    "path": "<HID::Logitech X52 Professional H.O.T.A.S.>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Throttle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03449cc5-f1f9-4cba-9579-7c62a1b46947",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "KandM",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a04df1c-1866-4aff-bdd2-3a7e60e5d00d",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stick",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "79461b7a-77d7-45d5-a8f4-3845b42eb004",
                    "path": "<Joystick>/stick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stick",
                    "action": "pitchAndRollJoystick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "73d5f074-cc38-4173-a4cc-fad677ddfdf6",
                    "path": "<HID::Logitech X52 Professional H.O.T.A.S.>/rz",
                    "interactions": "",
                    "processors": "",
                    "groups": "Stick",
                    "action": "StickRz",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KandM",
            "bindingGroup": "KandM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Stick",
            "bindingGroup": "Stick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}